# lezard

./: .gitignore  Cargo.toml  Makefile  README.md  create-project.sh
programs/: Cargo.toml
src/: lib.rs
template/: .gitignore  Cargo.toml  Makefile
template/tests/: double_test.rs
tests/: double_test.rs
