[workspace]
resolver = "3"

[workspace.package]
license = "MIT or Apache-2.0"

# These workspace dependencies satisfy nssa_core's `workspace = true` entries
# when it's vendored into .deps/nssa_core by `make build-programs`.
[workspace.dependencies]
nssa_core = { path = ".deps/nssa_core" }
risc0-zkvm = { version = "3.0.5", features = ["std"] }
borsh = "1.5.7"
serde = { version = "1.0.60", default-features = false, features = ["derive"] }
serde_with = "3.16.1"
thiserror = "2.0.12"
bytemuck = "1.24.0"
base58 = "0.2.0"
k256 = { version = "0.13.3", features = ["ecdsa-core", "arithmetic", "expose-field", "serde", "pem"] }
serde_json = "1.0.81"
hex = "0.4.3"

[package]
name = "lezard_programs"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa_core.workspace = true
hex.workspace = true
bytemuck.workspace = true
risc0-zkvm.workspace = true
